scss/fermyon-base.scss
/* ... */
body.dark-theme {
    background: $oxfordblue;
    color: white;

    h1, h2, h3, h4, h5, p, li {
        color: white;
    }

    #topbar.navbar {
        background: $oxfordblue;
        border-color: $darkocean;

        .logo {
            svg, path {
                fill: white !important;
            }
        }
        .logo-project a {
            color: $seagreen;

            .tag {
                background-color: $darkspace;
            }
        }

        .navbar-menu {
            a {
                color: $seagreen;
            }

            .button {
                border: 3px solid $seagreen;

                &:hover {
                    background: $seagreen !important;
                    color: $oxfordblue;
                }
            }
        }

        .dark-mode {
            svg {
                fill: $seagreen;
                transform: rotate(180deg);
                @include transition;
            }
        }
    }

    aside.menu {
        left: 5vw;

        a {
            color: white;
            
            &:hover {
                color: $oxfordblue;
            }
        }
    }

    pre {
        background: linear-gradient(0, #173564 15%, lighten(desaturate(#173564, 12.5%), 3%) 100%);
    }

    .card {
        background: linear-gradient(0, lighten($oxfordblue, 5%), $oxfordblue 100%);
        box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.5),
                    0 0 0 1px rgba(10,10,10,.52);
        outline: 1px solid rgba(255,255,255,0.2);
        color: white;

        figure.image {
            border-bottom: 1px solid rgba(255,255,255,0.333);
        }

        p {
            color: white;
        }
    }

    .content {
        .box {
            background-color: $darkspace;
            color: white;
        }
        
        h1, h2, h3, h4, h5, p, li, th, td, dd  {
            code {
                background-color: $darkspace;
                color: $lightlavender;
            }
        }

        section {
            table {
                background-color: $darkspace;
            }
        }

        blockquote {
            background-color: transparent;

            p {
                background-color: lighten($darkspace, 2.5%);
                border-color: lighten($darkspace, 7.5%);
                color: white;
            }
        }

        blockquote > blockquote p,
        aside p {
            background-color: lighten($darkspace, 2.5%);
            border-color: lighten($darkspace, 7.5%);
            color: white;
        }
    }

    

    footer {
        background: $oxfordblue;
        border-color: $darkocean;
        color: white;

        h4 {
            color: white;
        }

        .footer-nav {
            border-color: darken($oxfordblue, 7.5%);
        }

        p, li, a {
            color: $seagreen;
        }
    }
}

